# LoginHarvest

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
login_harvest/: __init__.py  analyzers.py  default.json  extractor.py
tests/: login_urls.json  requierments.txt  test_html_extractor.py
