[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "login-harvest"
version = "0.0.1a"
description = "A library to extract login-related HTML elements from web pages."
authors = [{ name = "Victor DeLaplaine", email = "auth.sentry@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["beautifulsoup4",]

[tool.setuptools]
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/ByVictorrr/LoginHarvest"

[tool.setuptools.packages.find]
where = ["login_harvest"]

[tool.setuptools.package_data]
"login_harvest" = ["*.json"]

[tool.setuptools.classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
